--- a/assignment_4/configuration.yaml
+++ b/assignment_4/configuration.yaml
@@ -13,4 +13,8 @@ DATA_NUM_CLASSES: 10
 UNIFORM_DISTRIBUTION_TOLERANCE: 0.10
 
 
+RUN_HISTOGRAM_FEATURE_EXTRACT: False
+HISTOGRAM_FEATURE_PATH: './data/featuresHistogram.pickle'
+HISTOGRAM_BUCKET_RESOLUTION: 30
+
   
