added function to validate recall

--- a/assignment_4/configuration.yaml
+++ b/assignment_4/configuration.yaml
@@ -13,8 +13,9 @@ DATA_NUM_CLASSES: 10
 UNIFORM_DISTRIBUTION_TOLERANCE: 0.10
 
 
-RUN_HISTOGRAM_FEATURE_EXTRACT: False
-HISTOGRAM_FEATURE_PATH: './data/featuresHistogram.pickle'
+RUN_HISTOGRAM_FEATURE_EXTRACT: True
+HISTOGRAM_FEATURE_PATH_TRAINING: './data/featuresHistogram.pickle'
+HISTOGRAM_FEATURE_PATH_TEST: './data/featuresHistogramTest.pickle'
 HISTOGRAM_BUCKET_RESOLUTION: 30
 
   
