--- a/assignment_4/configuration.yaml
+++ b/assignment_4/configuration.yaml
@@ -34,3 +34,6 @@ LBP_FEATURE_PATH_TEST: './data/featuresLbpTest.pickle'
 LBP_BUCKET_RESOLUTION: 30
 LBP_RADIUS: 3
 LBP_POINTS: 8
+
+SEARCHER_METHOD: 'LBP' # [HISTOGRAM, CNN, LBP]
+PLAY_IMAGE_INDEX: 105  # good ones rgb( 112 114 72 800 855 1230 1232 1832) cnn(1832, 1812, 282, 2333*bad good ) lbp(2333* good bad, 102 )
